[package]
name = "invader-game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
reqwest = "0.11.23"
